# cosmic-app-template

./: Cargo.toml  README.md  cargo-generate.toml  justfile  temp_alarm_edit.rs
cosmic-watch/: Cargo.toml  README.md  justfile
cosmic-watch/i18n/en/: cosmic_watch.ftl
cosmic-watch/resources/: app.desktop  app.metainfo.xml
cosmic-watch/src/: app.rs  config.rs  i18n.rs  main.rs
generate/: README.md  cleanup.rhai  license.rhai  rename.rhai  template-README.md
generate/licenses/: AGPL-3.0  Apache-2.0  Custom  MIT  MPL-2.0
i18n/en/: cosmic_app_template.ftl  cosmic_watch.ftl
i18n/fr/: cosmic_app_template.ftl
i18n/nl/: cosmic_app_template.ftl
res/: app.desktop
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs  notifications.rs
